EXTRA_DIST = Doxyfile table0.txt table1.txt p_mbtype.txt b_mbtype.txt coded.txt mbinc.txt dc_size_luma.txt dc_size_chroma.txt motion_code.txt vldbuild.rb makevld.rb doc.txt idct_mismatch.rb conv_mbtype.rb timingchart.rb vld_totalcoef.rb h264vld.txt h264zeros1.txt h264zeros10.txt h264zeros11.txt h264zeros12.txt h264zeros13.txt h264zeros14.txt h264zeros2.txt h264zeros3.txt h264zeros4.txt h264zeros5.txt h264zeros6.txt h264zeros7.txt h264zeros8.txt h264zeros9.txt h264run2.txt h264run4.txt h264run5.txt h264run6.txt h264run7.txt h264vldchroma.txt
